--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,15 +12,15 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 
 [env.production]
 name = "cloudflare-docker-proxy"
-# routes = [
-#   { pattern = "docker.931201.xyz", custom_domain = true },
-#   { pattern = "quay.931201.xyz", custom_domain = true },
-#   { pattern = "gcr.931201.xyz", custom_domain = true },
-#   { pattern = "k8s-gcr.931201.xyz", custom_domain = true },
-#   { pattern = "k8s.931201.xyz", custom_domain = true },
-#   { pattern = "ghcr.931201.xyz", custom_domain = true },
-#   { pattern = "cloudsmith.931201.xyz", custom_domain = true },
-# ]
+routes = [
+   { pattern = "docker.931201.xyz", custom_domain = true },
+   { pattern = "quay.931201.xyz", custom_domain = true },
+   { pattern = "gcr.931201.xyz", custom_domain = true },
+   { pattern = "k8s-gcr.931201.xyz", custom_domain = true },
+   { pattern = "k8s.931201.xyz", custom_domain = true },
+   { pattern = "ghcr.931201.xyz", custom_domain = true },
+   { pattern = "cloudsmith.931201.xyz", custom_domain = true },
+ ]
 
 [env.production.vars]
 MODE = "production"
@@ -28,7 +28,7 @@ TARGET_UPSTREAM = ""
 
 [env.staging]
 name = "cloudflare-docker-proxy-staging"
-# route = { pattern = "docker-staging.931201.xyz", custom_domain = true }
+route = { pattern = "docker-staging.931201.xyz", custom_domain = true }
 
 [env.staging.vars]
 MODE = "staging"
